--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=FileUploadAppDb;User=root;Password=Oah77502236.;"
+    "DefaultConnection": "Server=localhost;Database=FileUploadAppDb;User=root;Password=password;"
   }
 }
